--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -15,7 +15,7 @@ pt-BR:
             has_many: "Não é possível excluir o registro pois existem %{record} dependentes"
       user:
         created_at: "Criado em"
-        email: "email"
+        email: "Email"
         name: "Nome"
         password: "Senha"
         password_confirmation: "Confirmação de senha"
@@ -169,14 +169,16 @@ pt-BR:
     name: "Nome"
     new: "Novo"
     newest: "Mais recentes"
-    update: "Atualizar"
+    profile: "Perfil"
     save: "Salvar"
     send_mail: "Enviar email"
     send_mailto: "Enviar email para"
+    settings: "Configurações"
     show: "Mostrar"
     show_details: "Mostrar detalhes"
     to_disable: "Desabilitar"
     to_enable: "Habilitar"
+    update: "Atualizar"
     welcome: "Bem vindo ao Trade4Me"
     messages:
       created: "%{model} criado(a) com sucesso."
